add .github workflow and update basic info on the project

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = pygw
+name = wxflow
 version = 0.0.1
-description = Global applications specific workflow related tools
+description = Tools for Weather Workflows
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = "NOAA/NWS/NCEP/EMC"
 #author_email = first.last@domain.tld
-keywords = NOAA, NWS, NCEP, EMC, GFS, GEFS
-home_page = https://github.com/noaa-emc/global-workflow
+keywords = NOAA, NWS, NCEP, EMC, GFS, GEFS, SFS, RRFS
+home_page = https://github.com/noaa-emc/wxflow
 license = GNU Lesser General Public License
 classifiers =
   Development Status :: 1 - Beta
@@ -22,12 +22,13 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Topic :: Software Development :: Libraries :: Python Modules
   Operating System :: OS Independent
   Typing :: Typed
 project_urls =
-  Bug Tracker = https://github.com/noaa-emc/global-workflow/issues
-  CI = https://github.com/noaa-emc/global-workflow/actions
+  Bug Tracker = https://github.com/noaa-emc/wxflow/issues
+  CI = https://github.com/noaa-emc/wxflow/actions
 
 [options]
 zip_safe = False
