add .editorconfig and move .pycodestyle to the default place

--- a/.github/workflows/pynorms.yaml
+++ b/.github/workflows/pynorms.yaml
@@ -19,4 +19,4 @@ jobs:
     - name: Run pycodestyle
       run: |
         cd $GITHUB_WORKSPACE
-        pycodestyle -v --config ./.pycodestyle --exclude='.git,.github' ./
+        pycodestyle --verbose ./
