more comprehensive coverage reports

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,4 +64,4 @@ quiet-stdout = true
 run-coverage = true
 
 [tool:pytest]
-addopts = --cov=./
+addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html
