--- a/setup.cfg
+++ b/setup.cfg
@@ -65,3 +65,8 @@ run-coverage = true
 
 [tool:pytest]
 addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html
+
+[tool:flake8]
+exclude = .git,.github,venv,__pycache__,docs/conf.py,old,build,dist
+max-line-length = 160
+per-file-ignores = __init__.py: F401
