--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ where=src
 * = *.txt, *.md
 
 [options.extras_require]
-dev = pytest>=7; pytest-cov>=3, isort>=5, black>=21, flake8>=4, pre-commit>=2, tox>=3
+dev = pytest>=7; pytest-cov>=3; isort>=5; black>=21; flake8>=4; pre-commit>=2; tox>=3
 docs = sphinx>=4; sphinx-autobuild; sphinx_rtd_theme>=0.5
 
 [green]
