--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,9 @@ run-coverage = true
 [tool:pytest]
 addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html
 
+[tool: isort]
+profile = black
+
 [tool:flake8]
 exclude = .git,.github,venv,__pycache__,docs/conf.py,old,build,dist
 max-line-length = 160
