--- a/.github/workflows/pynorms.yaml
+++ b/.github/workflows/pynorms.yaml
@@ -7,6 +7,10 @@ jobs:
     name: Check Python coding norms
 
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+      - name: Install (upgrade) python dependencies (pycodestyle)
+        run: |
+          pip install --upgrade pip
+          pip install pycodestyle
+      - uses: actions/checkout@v3
       - uses: pre-commit/action@v3.0.0
