--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ install_requires =
   numpy>=1.21.6
   PyYAML>=6.0
   Jinja2>=3.1.2
+  fsspec>=2021.10.1
 tests_require =
   pytest, pytest-cov, isort, pycodestyle
 
