make fsspec optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,6 @@ install_requires =
   numpy>=1.21.6
   PyYAML>=6.0
   Jinja2>=3.1.2
-  fsspec>=2021.10.1
 tests_require =
   pytest, pytest-cov, isort, pycodestyle
 
@@ -56,6 +55,7 @@ where=src
 [options.extras_require]
 dev = pytest>=7; pytest-cov>=3; isort>=5; pycodestyle>=2; pre-commit>=2; tox>=3
 docs = sphinx>=4; sphinx-autobuild; sphinx_rtd_theme>=0.5; furo>=2023.03.23; sphinx-copybutton
+fs = fsspec>=2021.10.1
 
 [green]
 file-pattern = test_*.py
