arrange requires in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,9 +53,24 @@ where=src
 * = *.txt, *.md
 
 [options.extras_require]
-dev = pytest>=7; pytest-cov>=3; isort>=5; pycodestyle>=2; pre-commit>=2; tox>=3
-docs = sphinx>=4; sphinx-autobuild; sphinx_rtd_theme>=0.5; furo>=2023.03.23; sphinx-copybutton
-fs = fsspec>=2021.10.1
+io =
+  fsspec>=2021.10.1
+docs =
+  sphinx>=4
+  sphinx-autobuild
+  sphinx_rtd_theme>=0.5
+  furo>=2023.03.23
+  sphinx-copybutton
+complete =
+  %(io)s
+  %(docs)s
+dev =
+  pytest>=7
+  pytest-cov>=3
+  isort>=5
+  pycodestyle>=2
+  pre-commit>=2
+  tox>=3
 
 [green]
 file-pattern = test_*.py
@@ -68,5 +83,5 @@ run-coverage = true
 addopts = --cov=wxflow --cov-report=term-missing --cov-report=xml --cov-report=html
 
 [tool:pycodestyle]
-exclude = .git,.github,venv,.vscode,docs/conf.py
+exclude = .git,.github,.vscode,.venv,venv,docs/conf.py
 max-line-length = 160
