--- a/.github/workflows/pynorms.yaml
+++ b/.github/workflows/pynorms.yaml
@@ -8,6 +8,8 @@ jobs:
 
     steps:
       - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
       - name: Install (upgrade) python dependencies (pycodestyle)
         run: |
           pip install --upgrade pip
